[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UI/biodex/pokedex_infos.png" type="Texture" id=1]
[ext_resource path="res://scenes/UI/Screen/biodex_infos.gd" type="Script" id=2]
[ext_resource path="res://Assets/Biomons/Larvab√©.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/pkmnfl.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/UI/TypeSprite.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 4 )

[node name="biodex_infos" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ButonSelect" type="Sprite" parent="."]
position = Vector2( 121, 82 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 4

[node name="TypeSprite" parent="." instance=ExtResource( 5 )]
position = Vector2( 35.28, 32.48 )
scale = Vector2( 0.09, 0.09 )

[node name="TypeSprite2" parent="." instance=ExtResource( 5 )]
position = Vector2( 70.28, 32.48 )
scale = Vector2( 0.09, 0.09 )

[node name="BiomonSprite" type="Sprite" parent="."]
position = Vector2( 24, 40 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 35, 63, 62 )

[node name="Id" type="RichTextLabel" parent="."]
modulate = Color( 0.0784314, 0.0745098, 0.0745098, 1 )
self_modulate = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
margin_left = 108.0
margin_top = 30.0
margin_right = 128.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 12 )
rect_clip_content = false
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.894118, 0.882353, 0.894118, 0.247059 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/line_separation = 6
custom_fonts/normal_font = SubResource( 1 )
meta_underlined = false
text = "1"
__meta__ = {
"_editor_description_": ""
}

[node name="Name" type="RichTextLabel" parent="."]
modulate = Color( 0.0784314, 0.0745098, 0.0745098, 1 )
self_modulate = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
margin_left = 130.0
margin_top = 30.0
margin_right = 230.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 12 )
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.894118, 0.882353, 0.894118, 0.247059 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/line_separation = 6
custom_fonts/normal_font = SubResource( 1 )
meta_underlined = false
text = "1"
__meta__ = {
"_editor_description_": "Biomon"
}

[node name="Height" type="RichTextLabel" parent="."]
modulate = Color( 0.0784314, 0.0745098, 0.0745098, 1 )
self_modulate = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
margin_left = 150.0
margin_top = 62.0
margin_right = 190.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 12 )
rect_clip_content = false
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.894118, 0.882353, 0.894118, 0.247059 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/line_separation = 6
custom_fonts/normal_font = SubResource( 1 )
meta_underlined = false
text = "1"
__meta__ = {
"_editor_description_": "Biomon"
}

[node name="Weight" type="RichTextLabel" parent="."]
modulate = Color( 0.0784314, 0.0745098, 0.0745098, 1 )
self_modulate = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
margin_left = 150.0
margin_top = 78.0
margin_right = 190.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 12 )
rect_clip_content = false
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.894118, 0.882353, 0.894118, 0.247059 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/line_separation = 6
custom_fonts/normal_font = SubResource( 1 )
meta_underlined = false
text = "1"
__meta__ = {
"_editor_description_": "Biomon"
}

[node name="Species" type="RichTextLabel" parent="."]
modulate = Color( 0.0784314, 0.0745098, 0.0745098, 1 )
self_modulate = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
margin_left = 94.0
margin_top = 46.0
margin_right = 294.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 12 )
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.894118, 0.882353, 0.894118, 0.247059 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/line_separation = 6
custom_fonts/normal_font = SubResource( 1 )
meta_underlined = false
text = "1"
__meta__ = {
"_editor_description_": "Biomon"
}

[node name="Desc" type="RichTextLabel" parent="."]
modulate = Color( 0.0784314, 0.0745098, 0.0745098, 1 )
self_modulate = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
margin_left = 9.0
margin_top = 99.0
margin_right = 234.0
margin_bottom = 159.0
rect_min_size = Vector2( 0, 12 )
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.894118, 0.882353, 0.894118, 0.247059 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/line_separation = 6
custom_constants/shadow_as_outline = 0
custom_fonts/normal_font = SubResource( 1 )
meta_underlined = false
tab_size = 1
text = "1"
__meta__ = {
"_editor_description_": "Biomon"
}
